fixed button numbers & classes, added vars to script

--- a/index.html
+++ b/index.html
@@ -15,29 +15,32 @@
 
 <body>
   <header>
-    <h1>Let's Calculate</h1>
+    <h1>Let's Do Some Calculations!</h1>
   </header>
   <div id="main-content">
     <div id="calculator-grid">
       <div class="button" id="screen-disp">1+1=2</div>
-      <div class="button" role="button">Clear</div>
-      <div class="button" role="button">Del</div>
-      <div class="button" role="button">1</div>
-      <div class="button" role="button">2</div>
-      <div class="button" role="button">3</div>
-      <div class="button" role="button">/</div>
-      <div class="button" role="button">4</div>
-      <div class="button" role="button">5</div>
-      <div class="button" role="button">6</div>
-      <div class="button" role="button">*</div>
-      <div class="button" role="button">7</div>
-      <div class="button" role="button">8</div>
-      <div class="button" role="button">9</div>
-      <div class="button" role="button">-</div>
-      <div class="button" role="button">00</div>
-      <div class="button" role="button">.</div>
-      <div class="button" role="button">=</div>
-      <div class="button" role="button">+</div>
+      <div class="button" role="button" id="clear-btn">Clear</div>
+      <div class="button" role="button" id="del-btn">Del</div>
+      <div class="button" role="button" id="exp-btn">^</div>
+      <div class="button" role="button" id="root-btn">√</div>
+      <div class="button" role="button" id="mod-btn">%</div>
+      <div class="button" role="button" id="divide-btn">/</div>
+      <div class="button" role="button" id="one-btn">1</div>
+      <div class="button" role="button" id="two-btn">2</div>
+      <div class="button" role="button" id="three-btn">3</div>
+      <div class="button" role="button" id="multi-btn">*</div>
+      <div class="button" role="button" id="four-btn">4</div>
+      <div class="button" role="button" id="five-btn">5</div>
+      <div class="button" role="button" id="six-btn">6</div>
+      <div class="button" role="button" id="minus-btn">-</div>
+      <div class="button" role="button" id="seven-btn">7</div>
+      <div class="button" role="button" id="eight-btn">8</div>
+      <div class="button" role="button" id="nine-btn">9</div>
+      <div class="button" role="button" id="zero-btn">00</div>
+      <div class="button" role="button" id="dot-btn">.</div>
+      <div class="button" role="button" id="equal-btn">=</div>
+      <div class="button" role="button" id="plus-btn">+</div>
     </div>
   </div>
 </body>
