finally fixed the display but editing calculator object to use exponentiation in appendNumber & calculate functions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   </header>
   <div id="main-content">
     <div id="calculator-grid">
-      <div class="screen" id="screen-disp" maxLength="10">0</div>
+      <div class="screen">
+        <div id="hist-display"></div>
+        <div id="current-display">0</div>
+      </div>
       <div class="button" role="button" id="clear-btn">Clear</div>
       <div class="button" role="button" id="del-btn">Del</div>
       <div class="button operate" role="button" id="exp-btn">^</div>
