fixed negative button issue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="button" role="button" id="del-btn">Del</div>
       <div class="button operate" role="button" id="exp-btn">^</div>
       <div class="button operate" role="button" id="root-btn">√</div>
-      <div class="button operate" role="button" id="convert-btn">+-</div>
+      <div class="button" role="button" id="convert-btn">(−)</div>
       <div class="button operate" role="button" id="divide-btn">/</div>
       <div class="button number" role="button">1</div>
       <div class="button number" role="button">2</div>
